[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Objects/LaserDrill.gd" type="Script" id=1]
[ext_resource path="res://Assets/Objects/image-300684.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Abilities/Laser.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="LaserDrill" type="StaticBody2D"]
position = Vector2( 40, 32 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -8, -8 )
scale = Vector2( 0.0756501, 0.0538721 )
texture = ExtResource( 2 )

[node name="LaserOn" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="LaserOff" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -8, -8 )
shape = SubResource( 1 )

[node name="Laser" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 0 )

[connection signal="timeout" from="LaserOn" to="." method="_on_LaserOn_timeout"]
[connection signal="timeout" from="LaserOff" to="." method="_on_LaserOff_timeout"]
